GPencil: Interpolate Sequence crash and quit. #91534

Closed
opened 2021-09-20 16:39:42 +02:00 by yq-ysy · 7 comments

System Information
Operating system: Linux & Windows10
Graphics card: any

Blender Version
Broken: 2.93.4 & 3.0 Alpha
Worked: 2.83.5

I am a teacher, teach my 140 students Blender Grease Pencil animation.
Some of students ( quantity is 10 ) found this bug:
After draw stroke, in Edit Mode,
make some point Radius bigger, move some points,

I don't know which step cause this error, in 2.93.4 & 3.0 Alpha Blender crash and quit.
But the same blend files, in 2.83.5 run draw--Interpolate--Sequence, is OK.

Steps to Reproduce

  • Open .blend file
  • Draw -> Interpolate Sequence

Test File:
GP_Bug-4.blend

**System Information** Operating system: Linux & Windows10 Graphics card: any **Blender Version** Broken: 2.93.4 & 3.0 Alpha Worked: 2.83.5 I am a teacher, teach my 140 students Blender Grease Pencil animation. Some of students ( quantity is 10 ) found this bug: After draw stroke, in Edit Mode, make some point Radius bigger, move some points, I don't know which step cause this error, in 2.93.4 & 3.0 Alpha Blender crash and quit. But the same blend files, in 2.83.5 run draw--Interpolate--Sequence, is OK. **Steps to Reproduce** - Open .blend file - `Draw -> Interpolate Sequence` Test File: [GP_Bug-4.blend](https://archive.blender.org/developer/F10515168/GP_Bug-4.blend)

Added subscriber: @yq-ysy

Added subscriber: @yq-ysy

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can reproduce the crash on master. Thanks for the report :)

blender.exe         :0x00007FF679D18FD0  gpencil_point_to_parent_space
blender.exe         :0x00007FF679D4A0F0  gpencil_stroke_need_flip
blender.exe         :0x00007FF679D48B90  gpencil_interpolate_seq_exec
blender.exe         :0x00007FF679778130  wm_operator_invoke
blender.exe         :0x00007FF679777850  wm_operator_call_internal
blender.exe         :0x00007FF6797712D0  WM_operator_name_call_ptr
blender.exe         :0x00007FF679EDBD10  ui_apply_but_funcs_after
blender.exe         :0x00007FF679EE6000  ui_handler_region_menu
blender.exe         :0x00007FF679776DE0  wm_handlers_do_intern
blender.exe         :0x00007FF679776450  wm_handlers_do
blender.exe         :0x00007FF679773850  wm_event_do_handlers
blender.exe         :0x00007FF67975E6A0  WM_main
blender.exe         :0x00007FF679421C90  main
blender.exe         :0x00007FF67E202788  __scrt_common_main_seh
KERNEL32.DLL        :0x00007FFD593E7020  BaseThreadInitThunk
ntdll.dll           :0x00007FFD595E2630  RtlUserThreadStart```
Can reproduce the crash on master. Thanks for the report :) ```blender.exe :0x00007FF67E0BBD10 mul_v3_m4v3 blender.exe :0x00007FF679D18FD0 gpencil_point_to_parent_space blender.exe :0x00007FF679D4A0F0 gpencil_stroke_need_flip blender.exe :0x00007FF679D48B90 gpencil_interpolate_seq_exec blender.exe :0x00007FF679778130 wm_operator_invoke blender.exe :0x00007FF679777850 wm_operator_call_internal blender.exe :0x00007FF6797712D0 WM_operator_name_call_ptr blender.exe :0x00007FF679EDBD10 ui_apply_but_funcs_after blender.exe :0x00007FF679EE6000 ui_handler_region_menu blender.exe :0x00007FF679776DE0 wm_handlers_do_intern blender.exe :0x00007FF679776450 wm_handlers_do blender.exe :0x00007FF679773850 wm_event_do_handlers blender.exe :0x00007FF67975E6A0 WM_main blender.exe :0x00007FF679421C90 main blender.exe :0x00007FF67E202788 __scrt_common_main_seh KERNEL32.DLL :0x00007FFD593E7020 BaseThreadInitThunk ntdll.dll :0x00007FFD595E2630 RtlUserThreadStart```
Antonio Vazquez self-assigned this 2021-09-21 13:24:01 +02:00

This issue was referenced by 934c724755

This issue was referenced by 934c724755a97faa21f0a4d756a3cfd03adb1476

This issue was referenced by 49ab38bf54

This issue was referenced by 49ab38bf54d4da95f0bb67a348c9305527d95983

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Antonio Vazquez changed title from Grease Pencil Interpolate Sequence crash and quit. to GPencil: Interpolate Sequence crash and quit. 2021-09-21 17:30:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91534
There is no content yet.