Fix T91534: GPencil interpolate Sequence fails if stroke has 0 points

In some cases the stroke has 0 points and this must be skipped in the interpolation.